postgresql migration (variable)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SqlExpress;Database=HotelsDb; Trusted_Connection=true; TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost;Database=HotelsDb;Port=5432;Username=postgres; Password=Zuko#21110"
   },
   "Logging": {
     "LogLevel": {
